[package]
name = "council"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
cli-clipboard = "0.4.0"
cocoon = "0.4.1"
dirs = "5.0.1"
rpassword = "7.3.1"
serde_json = "1.0.116"

[profile.release]
strip = true
lto = true
codeget-units = 1
